welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
""""var compt = 0;
^Diagonal:16: error: not found: value compt
while (!posInter()){ ecritMessage(""+compt);compt+=1;
                                     ^Diagonal:16: error: not found: value compt
while (!posInter()){ ecritMessage(""+compt);compt+=1;
                                            ^Diagonal:22: error: not found: value compt
while (!posFinale()){ ecritMessage(""+compt);compt+=1;
                                      ^Diagonal:22: error: not found: value compt
while (!posFinale()){ ecritMessage(""+compt);compt+=1;
                                             ^